@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,8 +18,8 @@ package ghidra.program.database.oldfunction;
 import java.io.IOException;
 import java.util.*;
 
-import db.Field;
 import db.DBRecord;
+import db.Field;
 import ghidra.program.model.address.AddressOutOfBoundsException;
 import ghidra.program.model.data.DataType;
 import ghidra.program.model.listing.*;
@@ -27,9 +27,6 @@ import ghidra.program.model.symbol.SourceType;
 import ghidra.util.Msg;
 import ghidra.util.exception.InvalidInputException;
 
-/**
- * 
- */
 class OldStackFrameDB implements StackFrame {
 
 	private int localSize;      // if local size == 0, size is longest defined local
@@ -299,7 +296,7 @@ class OldStackFrameDB implements StackFrame {
 
 				// find the first stack variable defined at or after 0
 				loadStackVariables();
-				Object key = new Integer(0);
+				Object key = Integer.valueOf(0);
 				int loc = Collections.binarySearch(variables, key, StackVariableComparator.get());
 				loc = (loc < 0 ? -1 - loc : loc);
 				if (loc < variables.size()) {
@@ -345,7 +342,7 @@ class OldStackFrameDB implements StackFrame {
 	public Variable getVariableContaining(int offset) {
 		synchronized (function) {
 			loadStackVariables();
-			Object key = new Integer(offset);
+			Object key = Integer.valueOf(offset);
 			int index = Collections.binarySearch(variables, key, StackVariableComparator.get());
 			if (index >= 0) {
 				return variables.get(index);
